# offers-api-sdk

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api_reference.md  cli_usage.md  configuration.md  hooks.md  plugins.md  quickstart.md
src/cli/: cli_auth.py  constants.py  main.py
src/sdk/: __init__.py  client.py
src/sdk/api/: base_api.py  constatns.py  offers.py  products.py
src/sdk/auth/: client.py  constants.py
src/sdk/config/: sdk_config.py
src/sdk/http/: interfaces.py  utils.py
src/sdk/http/backends/: aiohttp_backend.py  base_async_backend.py  httpx_backend.py  requests_backend.py
src/sdk/http/hooks/: __init__.py  type.py
src/sdk/models/: auth.py  offer.py  product.py
src/sdk/plugins/: __init__.py  interfaces.py
src/sdk/sync/: __init__.py  client.py  offers.py  products.py
src/sdk/utils/: exceptions.py  logger.py
tests/sdk/: test_auth_client.py  test_offers_client.py  test_raise_for_status.py  test_sdk_config.py
tests/sdk/api/: test_base_api.py  test_offers_api.py  test_products_api.py
tests/sdk/http/: test_abstract_backend.py  test_aiohttp_backend.py  test_httpx_backend.py  test_requests_backend.py
tests/sdk/sync/: test_sync_client.py
