[tool.poetry]
name = "offers-api-sdk"
version = "0.1.1"
description = "Offers API SDK to register products and retrieve offers."
authors = ["Nikita Chuprin <chuprinnikita8@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "sdk", from = "src" },
    { include = "cli", from = "src" }
]

[tool.poetry.scripts]
offers-cli = "cli.main:app"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.1"
pydantic = "^2.6.4"
python-dotenv = "^1.1.0"
tenacity = "^9.1.2"
requests = "^2.32.4"
fastapi = "^0.115.10"
uvicorn = "^0.34.3"
aiohttp = "^3.12.7"
datamodel-code-generator = "^0.31.2"
typer = {extras = ["all"], version = "^0.16.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.9.0"
build = "^1.2.2.post1"

[build-system]
requires = ["poetry-core>=1.8.1", "wheel"]
build-backend = "poetry.core.masonry.api"
